--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
         <a
           target="blank"
-          href="https://outlook.live.com/mail/inbox"
+          href="https://posteo.de/de"
           class="buttonLink__link card buttonLink__link-2"
         >
           <i class="buttonLink__icon" data-feather="mail"></i>
