--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bento</title>
+    <title>Hello!</title>
     <link rel=" shortcut icon" type="image/png" href="icons/favicon.png" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -65,20 +65,20 @@
         </a>
         <a
           target="blank"
-          href="https://calendar.google.com/calendar/r"
+          href="https://qs.allianz-services.de/hrd/login/index.hrd"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <i class="buttonLink__icon" data-feather="calendar"></i>
+          <i class="buttonLink__icon" data-feather="database"></i>
         </a>
         <a
           target="blank"
-          href="https://flipboard.com/"
+          href="https://www.sueddeutsche.de/"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <i class="buttonLink__icon" data-feather="bookmark"></i>
+          <i class="buttonLink__icon" data-feather="file-text"></i>
         </a>
         <a
-          href="https://columns.app"
+          href="https://codebeamer.allianz-services.de/cb/project/R90App"
           target="blank"
           class="buttonLink__link card buttonLink__link-5"
         >
