--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
         </a>
         <a
           target="blank"
-          href="https://qs.allianz-services.de/hrd/login/index.hrd"
+          href="https://"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <i class="buttonLink__icon" data-feather="database"></i>
+          <i class="buttonLink__icon" data-feather=""></i>
         </a>
         <a
           target="blank"
           href="https://www.sueddeutsche.de/"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <i class="buttonLink__icon" data-feather="x"></i>
+          <i class="buttonLink__icon" data-feather=""></i>
         </a>
         <a
           href="https://codebeamer.allianz-services.de/cb/project/R90App"
