--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
           href="https://"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <i class="buttonLink__icon" data-feather=""></i>
+          <i class="buttonLink__icon" data-feather="x"></i>
         </a>
         <a
           target="blank"
-          href="https://www.sueddeutsche.de/"
+          href="https://"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <i class="buttonLink__icon" data-feather=""></i>
+          <i class="buttonLink__icon" data-feather="x"></i>
         </a>
         <a
           href="https://codebeamer.allianz-services.de/cb/project/R90App"
