--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
       <div class="weatherBlock">
         <div class="weatherBlock__date">
+          <div id="day" class="">.</div>
           <div id="month" class=""></div>
-          <div id="day" class=""></div>
         </div>
         <div class="weatherBlock__weather">
           <div class="weather-icon">
