--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <div class="card list list__1">
         <i class="list__head" data-feather="archive"></i>
-        <a href:"https://github.com/gitname/react-gh-pages" target="blank" class="list_link"
+        <a href="https://github.com/gitname/react-gh-pages" target="blank" class="list_link"
            >Deploying a React App* to GitHub Pages</a>
       </div>
 
